# CpuHighPriority

./: .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package.json  regeditadd.bat  splashscreen.html  tailwind.config.js
other/: app.conf
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: executables.json  regeditremove.bat
src-tauri/src/: batch_files.rs  file_operations.rs  main.rs  os_wrappers.rs  process.rs  window.rs
src/components/: AddEntry.tsx  AppEntry.tsx  BlankSpace.tsx  BlankSpaceClickedEmitter.tsx  EntryList.tsx  InputField.tsx
src/helpers/: ScrollBar.tsx  SplashScreen.tsx
src/hooks/: useFileOps.ts  useScrollBarPos.ts
src/pages/: App.tsx  NoAdmin.tsx
src/styles/: styles.css
